Fix shortcode text color in dark mode

--- a/css/admin/block-editor.css
+++ b/css/admin/block-editor.css
@@ -164,6 +164,7 @@ button.content-title-visibility:before {
 # Fix shortcode block label color
 --------------------------------------------------------------*/
 
-.wp-block-shortcode label {
+.wp-block-shortcode label,
+.wp-block-shortcode .editor-plain-text {
 	color: initial;
 }
